CORS credentials for allow origin asterisk catch all

--- a/viewer/index_dita.html
+++ b/viewer/index_dita.html
@@ -990,8 +990,8 @@
             url: new URL(urlParams["url"]),
             requestConfig: {
                 method: "GET",
-                mode: "cors",
-                credentials: "include",
+                // mode: "cors",
+                // credentials: "include",
             },
             attributes: { // TODO: review these attributes and eventually needs better naming.
                 margin: 75, // subtract this from the iframe height , when setting the iframe minimum height
