injects absolute URL

--- a/viewer/index_dita.html
+++ b/viewer/index_dita.html
@@ -783,16 +783,16 @@
         };
         let urlParams = getURLQueryParams();
         let injectables = [
-            { type: 'style', url: '/viewer/readium-css/ReadiumCSS-before.css', r2before: true },
-            { type: 'style', url: '/viewer/readium-css/ReadiumCSS-default.css', r2default: true },
-            { type: 'style', url: '/viewer/readium-css/ReadiumCSS-after.css', r2after: true },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/readium-css/ReadiumCSS-before.css', r2before: true },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/readium-css/ReadiumCSS-default.css', r2default: true },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/readium-css/ReadiumCSS-after.css', r2after: true },
             // { type: 'script', url: 'https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/MathJax.js?config=TeX-MML-AM_CHTML&latest' },
             { type: 'style', url: 'https://fonts.googleapis.com/icon?family=Material+Icons'},
-            { type: 'style', url: '/viewer/fonts/opendyslexic/opendyslexic.css', fontFamily: 'opendyslexic' },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/fonts/opendyslexic/opendyslexic.css', fontFamily: 'opendyslexic' },
             { type: 'style', fontFamily: 'Courier', systemFont: true },
-            { type: 'style', url: '/viewer/injectables/style/popup.css' },
-            { type: 'style', url: '/viewer/injectables/style/popover.css' },
-            { type: 'style', url: '/viewer/injectables/style/style.css' },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/injectables/style/popup.css' },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/injectables/style/popover.css' },
+            { type: 'style', url: 'https://raw.githack.com/danielweck/R2D2BC/develop/viewer/injectables/style/style.css' },
             {
                 type: 'script',
                 url: 'https://polyfill.io/v3/polyfill.min.js?features=es6',
