GitHack URL proxy so can't use relative URL with root slash

--- a/viewer/index_dita.html
+++ b/viewer/index_dita.html
@@ -39,16 +39,16 @@
     <link rel="stylesheet" href="https://cdn.muicss.com/mui-latest/css/mui.min.css" />
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <link rel="stylesheet" href="/viewer/injectables/mui/style.css"/>
-    <script src="/viewer/injectables/mui/script.js"></script>
+    <link rel="stylesheet" href="injectables/mui/style.css"/>
+    <script src="injectables/mui/script.js"></script>
     <!-- END MUI CSS and JS -->
 
     <!-- START LineFocus CSS -->
-    <link rel="stylesheet" href="/viewer/injectables/style/linefocus.css" />
+    <link rel="stylesheet" href="injectables/style/linefocus.css" />
     <!-- END LineFocus CSS -->
 
     <!-- START Toast CSS -->
-    <link rel="stylesheet" href="/viewer/injectables/style/toast.css" />
+    <link rel="stylesheet" href="injectables/style/toast.css" />
     <!-- END Toast CSS -->
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
